--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,20 @@
+header h1{
+    color: white;
+    background-color: rgb(78, 106, 165);
+    
+}
+
+#form-container{
+    border-bottom: 2.5px solid rgb(66, 64, 64);
+}
+
 .low-uv{
     color: white;
     background-color: green;
 }
 .moderate-uv{
     color: white;
-    background-color: yellow
+    background-color: rgb(214, 214, 55)
 }
 .high-uv{
     color: white;
@@ -17,4 +27,9 @@
 .extreme-uv{
     color: white;
     background-color: magenta;
+}
+
+.forecast-card{
+    color: white;
+    background-color:rgb(121, 191, 212)
 }
