polish style and fonts on weather and forecast reports

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,14 @@ header h1{
     border-bottom: 2.5px solid rgb(66, 64, 64);
 }
 
+#recall{
+    border: 1.5px solid rgb(66, 64, 64);
+}
+
+#check-weather{
+    min-width: 110px;
+}
+
 .low-uv{
     color: white;
     background-color: green;
